# tree_sitter

./: .gitignore  .rubocop.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  Gemfile  LICENSE.txt  Makefile  README.md  Rakefile  tree_sitter.gemspec
.github/workflows/: lint.yml  tag_and_release.yml  test.yml  test_build.yml
ext/tree_sitter/: Cargo.toml  extconf.rb
ext/tree_sitter/src/: language.rs  lib.rs  node.rs  parser.rs  point.rs  query.rs  range.rs  tree.rs
lib/: tree_sitter.rb
lib/tree_sitter/: formatting.rb  inserter.rb  query_rewriter.rb  refactor.rb  rewriter.rb  transformer.rb  version.rb
rakelib/: extension.rake  test.rake
test/: test_formatting.rb  test_helper.rb  test_inserter.rb  test_language.rb  test_node.rb  test_parser.rb  test_query.rb  test_query_rewriter.rb  test_refactor.rb  test_rewriter.rb  test_transformer.rb
test/fixtures/: sample.cs  sample.go  sample.java  sample.js  sample.php  sample.py  sample.rb  sample.rs  sample_indentation_spaces.rs  sample_indentation_tabs.rs
