[package]
name = "tree_sitter"
version = "0.1.0"
edition = "2021"
authors = ["Garen J. Torikian <gjtorikian@users.noreply.github.com>"]
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = "0.8"
rb-sys = { version = "0.9", features = ["stable-api-compiled-fallback"] }
tree-sitter = "0.25"
tree-sitter-language = "0.1"
libloading = "0.9"
once_cell = "1.19"
streaming-iterator = "0.1"
